Android Studio 3.5 AndroidX Prepare migration of Tango to ARCore